--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "next": "9.3.6",
+    "now": "^19.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
