--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "next": "9.3.6",
     "now": "^19.0.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "@types/node": "^13.13.5",
     "@types/react": "^16.9.34",
+    "@types/styled-components": "^5.1.0",
+    "babel-plugin-styled-components": "^1.10.7",
     "typescript": "^3.8.3"
   }
 }
