--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
-    "axios": "^0.19.2",
-    "dotenv": "^8.2.0",
-    "next": "9.3.6",
-    "now": "^19.0.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "styled-components": "^5.1.0"
+    "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
+    "next": "^11.0.1",
+    "now": "^21.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
-    "@types/node": "^13.13.5",
-    "@types/react": "^16.9.34",
-    "@types/styled-components": "^5.1.0",
-    "babel-plugin-styled-components": "^1.10.7",
-    "typescript": "^3.8.3"
+    "@types/node": "^15.12.5",
+    "@types/react": "^17.0.12",
+    "@types/styled-components": "^5.1.10",
+    "babel-plugin-styled-components": "^1.13.1",
+    "typescript": "^4.3.5"
   }
 }
