--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/react": "^17.0.12",
     "@types/styled-components": "^5.1.10",
     "babel-plugin-styled-components": "^1.13.1",
+    "eslint": "^7.30.0",
+    "eslint-config-next": "^11.0.1",
     "typescript": "^4.3.5"
   }
 }
